# FaceSimilarityEngine

./: .replit  README.md  app.py  create_realistic_faces.py  create_sample_faces.py  database_manager.py  face_detector.py  faiss_search_engine.py  image_processor.py  insight_face_engine.py  models.py  pyproject.toml  replit.md  similarity_engine.py  web_crawler.py
attached_assets/: Pasted--Will-use-requests-only-INFO-root-WebCrawler-initialized-successfully-INFO-root-ImageProcessor-i-1750953887880_1750953887880.txt  Pasted-File-is-already-open-in-D-py3-11-python-exe-PID-37324-PS-E-Download-FaceSimilarityEngine-1-F-1750953378574_1750953378574.txt
data/: face_search.db  face_search.db.wal  faiss_metadata.pkl
static/dataset/: .gitkeep
static/js/: main.js
static/thumbnails/: .gitkeep
static/uploads/: .gitkeep
templates/: base.html  index.html  results.html
